--- a/backend/package.json
+++ b/backend/package.json
@@ -32,10 +32,12 @@
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "express": "^4.17.1",
+    "express-rate-limit": "^6.3.0",
     "express-winston": "^4.2.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.0",
+    "mongoose-unique-validator": "^3.0.0",
     "validator": "^13.7.0",
     "winston": "^3.4.0"
   }
